--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "twitter/bootstrap": "3.*",
-        "components/jquery": "1.11.1",
-        "symfony/assetic-bundle": "^2.8"
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
