--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,13 @@ fos_user:
     user_class: AppBundle\Entity\User
 
 
+hwi_oauth:
+    # list of names of the firewalls in which this bundle is active, this setting MUST be set
+    firewall_names: [main]
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           "%facebook_app_id%"
+            client_secret:       "%facebook_app_secret%"
+            scope:               ""
+
