--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,7 +31,7 @@ security:
                 resource_owners:
                     facebook:           "/social/login/check-facebook"
                 login_path:        /social/login
-                default_target_path: /test
+                default_target_path: /success/login
                 failure_path:      /social/login
 
                 oauth_user_provider:
