--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "hwi/oauth-bundle": "0.5.*-dev"
+        "hwi/oauth-bundle": "0.5.*-dev",
+        "facebook/graph-sdk": "^5.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
